Add VsCode debug config && Upload file for test use

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,11 +8,20 @@
             "preLaunchTask": "project_debug_build_task", // 预构建脚本
             "program": "${workspaceFolder}\\Build\\Debug\\SNOOPerToCSV.exe", // 调试目标
             "args": [ // 附加参数
+                "-f",
+                "GetAdcRaw",
+                "int16_t",
+                "-f",
+                "1",
+                "float",
+                ".\\Test\\Lauterbach-SNOOPer.txt",
+                "-t",
+                "1.234",
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}", // 工作目录
             "environment": [],
-            // "console": "externalTerminal",
+            "externalConsole": false,
         }
     ]
 }
